# WC-Command

./: FEATURES.md  README.md  ccwc.py  pyproject.toml  test.txt  test_ccwc.py
